--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,7 @@
     "@react-three/drei": "latest",
     "@react-three/fiber": "latest",
     "@supabase/supabase-js": "^2.55.0",
+    "@tinymce/tinymce-react": "^4.3.2",
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/nodemailer": "^6.4.17",
